# tradeentry

./: .bumpversion.cfg  .flake8  .gitignore  .isort.cfg  COPYRIGHT  README.md  install_requirements.txt  pyproject.toml  requirements.build.txt  requirements.linter.txt  requirements.txt  sample.secrets.yaml  sample_secrets.yaml  settings.toml  settings.yaml  setup.py
.github/workflows/: python-package.yml
cl/runtime/: __init__.py  __main__.py  config.py
cl/runtime_samples/: __init__.py
cl/tradeentry/: __main__.py
completions/: gpt-4o.completions.csv
data/csv/: PackageAlias.csv  TypeLabel.csv
mocks/: __init__.py
mocks/storage/: mock_data_class_record.py  mock_record.py
scripts/: 0_init_venv.cmd  1_format_and_validate_source.cmd  2_build_wheel.cmd  activate_venv.cmd  add_init_files.py  build.cmd  build_wheel.cmd  deactivate_venv.cmd  fix_copyright_header_blank_line.py  fix_init_files.py  format_and_validate_source.cmd  formatters.cmd  formatters.sh  init_venv.cmd  linters.cmd  linters.sh  prod_publish.cmd  publish.cmd  test_publish.cmd
stubs/: __init__.py
stubs/runtime/: __init__.py
tests/: __init__.py
tests/primitive/: test_string_util.py
tests/serialization/: test_orjson.py
tools/: convince_install_requirements.txt  runtime_install_requirements.txt  runtime_test_requirements.txt  tradeentry_install_requirements.txt
wwwroot/: css.worker.js  editor.worker.js  html.worker.js  index.html  json.worker.js  manifest.json  styles-a0eb65db.9290695e5aab89f3a964.css  styles-d91a9049.7cf3b6d19b83edfc396c.css  vendor-0bc0478e.427d163530d7b661f5e4.css
(+1952 files in other folders)
