[tool.black]
line-length = 120
include = '\.pyi?$'
target-version = ['py310']
force-exclude = '''
/(
    \.idea
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | __pycache__
  | _build
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools>=58.1.0", "wheel>=0.38.4"]
build-backend = "setuptools.build_meta"
